# parallel-python-workshop

./: .editorconfig  .gitignore  Cosmic Structure.ipynb  Hanno_Dask_bags.ipynb  Hanno_Dask_delayed.ipynb  Hanno_calc_pi_Numpy_Numba_Dask.array_GIL_multithreading_multiprocessing.ipynb  Pipfile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package-conda.yml
cosmic_structure/: Snakefile  cosmic_structure.py
mandelbrot/: Julia.ipynb  Mandelbrot.ipynb  Mandelbrot_solution.ipynb
peasoup/: .gitignore  Snakefile  water.txt
snakemake_intro/: .gitignore  Snakefile
snert/: .gitignore  Snakefile  peas.txt  vegetables.txt  water.txt
test/: test_dask.py  test_environment.py  test_pi.py  test_snakemake.py  test_threading.py
test/hello/: Snakefile
