[tool.poetry]
name = "parallel-python-workshop"
version = "0.1.0"
description = ""
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]

[tool.poetry.dependencies]
python = ">3.9, <3.11"
dask = {extras = ["complete"], version = "^2021.9.1"}
memory-profiler = "^0.58.0"
matplotlib = "^3.4.3"
numba = ">=0.55, <0.56"
graphviz = "^0.17"
nltk = "^3.6.5"
jupyterlab = "^3.2.1"
numpy = ">=1.20, <1.23"
pandas = "^1.3.4"
snakemake = "^6.9.1"
pytest = "^6.2.5"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
