[tool.poetry]
name = "parallel-python-workshop"
version = "0.1.0"
description = ""
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]

[tool.poetry.dependencies]
python = ">=3.9.0, <3.12"
dask = {extras = ["complete"], version = "^2021.9.1"}
memory-profiler = "^0.58.0"
matplotlib = "^3.4.3"
graphviz = "^0.17"
jupyterlab = "^3.2.1"
pandas = "^1.3.4"
pytest = "^6.2.5"
scipy = "^1.10.1"
numba = "^0.56.4"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
